add reservation cancelled event + fix sonar lint